<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_newtask_enterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:hint="@string/edittext_newtask_enterTitleHint" />

    <EditText
        android:id="@+id/edittext_newtask_enterDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_newtask_enterTitle"
        android:layout_marginTop="20dp"
        android:hint="@string/edittext_newtask_enterDescriptionHint" />

    <Spinner
        android:id="@+id/spinner_newtask_category"
        android:layout_below="@+id/edittext_newtask_enterDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textview_newtask_dueDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/spinner_newtask_category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/edittext_newtask_duewDateHint" />

    <Button
        android:id="@+id/button_newtask_setDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_dueDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/button_newtask_setDateText" />

    <Spinner
        android:id="@+id/spinner_newtask_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_newtask_setDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/imagebutton_newtask_saveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_newtask_priority"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/ic_menu_save"
        android:contentDescription="@string/imagebutton_newtask_saveDescription"/>


</RelativeLayout>